Deployed as NPM Pkg

--- a/package/package.json
+++ b/package/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "sample",
-  "version": "1.0.0",
+  "name": "google-sheet-database",
+  "version": "1.0.1",
   "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Matthew Coulter",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "node-fetch": "^3.3.0"
+    "google-sheet-database": "^1.0.1"
   }
 }
